# HRM-Text

./: AGENTS.md  README.md  dataset_new.py  multipack_sampler.py  pretrain.py  pyproject.toml  requirements-sm100.txt  requirements-sm90.txt  requirements.txt  simple_inference_engine.py
config/: cfg_pretrain.yaml  dfm_evals_hrm.yaml  dfm_evals_hrm_ifeval_da_16_shards.yaml  dfm_evals_hrm_ifeval_da_32_shards.yaml  dfm_evals_hrm_ifeval_da_4_shards.yaml  dfm_evals_hrm_ifeval_da_shards.yaml  dfm_evals_hrm_new_tasks_only.yaml  dfm_evals_hrm_single_tasks.yaml
conversion/: convert_to_hf.py
docs/: df5m.md  dfm5.md  dfm5_slack_tables.md  dfm6.md  math-evals.md
eval_scheduler/: README.md  __main__.py  pyproject.toml
eval_scheduler/eval_scheduler/: __init__.py  catalog.py  cli.py  locking.py  model.py  monitor.py  plan.py  runtime.py
evaluation/: README.md  benchmarks.py  engines.py  main.py
models/: accelerator.py  adam_atan2.py  flash_attention_prefixlm_common.py  flash_attention_prefixlm_dense.py  flash_attention_prefixlm_dispatch.py  flash_attention_prefixlm_fa3.py  flash_attention_prefixlm_fa4.py  flash_attention_prefixlm_mps.py  flash_attention_prefixlm_rocm.py  flash_attention_prefixlm_v2.py  goldfish_loss.py  layers.py  lm_head.py
scripts/: append_dfm5_l_clean_from_source_wandb.py  audit_dbc_article_datasets.py  audit_dfm6_chat_sources.py  audit_export_datasets.py  audit_reordering_datasets.py  backfill_dfm4_full_epoch2_plain_alias_wandb.py  backfill_dfm4_full_noema_new_run_wandb.py  backfill_dfm4_lite_noema_epochfix_wandb.py  backfill_dfm5_l_clean_wandb.py  backfill_external_eval_to_wandb.py  backfill_original_sapient_l_to_dfm5.py  backfill_qwen35_clean_wandb.py  build_dfm6_chat_source_tree.py  build_expert_exports.py  build_filtered_source_tree.py  build_synth_high40_source_tree.py  build_tokenized_dfm2_tree.py  build_tokenized_dfm3_tree.py  build_tokenized_dfm4_tree.py  build_tokenized_dfm5_tree.py  build_tokenized_dfm6_tree.py  build_tokenized_original_plus_mixed_tree.py  build_tokenized_posttrain_transform_refine_tree.py  capture_openai_payloads.py  check_goldfish_loss.py  cleanup_failed_training_run.sh  clone_dfm4_xl_ddp_clean_wandb.py  clone_wandb_run_without_bad_lite_300k.py  compare_dense_custom_mps_attention.py  compare_hrm_vllm_export.py  convert_filtered_sources.py  create_dfm5_headline_workspace.py  create_dfm5_l_vllm_eval_plan.sh  create_gemma4_e2b_clean_external_eval_plan.sh  create_smoke_from_sampled.py  (+108 more)
(+56 files in other folders)
