[project]
name = "hrm-text"
version = "0.1.0"
description = "HRM-Text pretraining, evaluation, and checkpoint conversion tooling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score",
    "coolname",
    "datasets",
    "einops",
    "fastapi",
    "flash-attn-4[cu13]",
    "hydra-core",
    "lm-eval[hf,vllm]",
    "math-verify",
    "numba",
    "numpy",
    "omegaconf",
    "pydantic",
    "pyyaml",
    "safetensors",
    "sympy",
    "torch",
    "tqdm",
    "transformers",
    "uvicorn",
    "vllm",
    "wandb",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "flash_attn/cute" }
torch = { index = "pytorch-cu130" }
