[project]
name = "hrm-text"
version = "0.1.0"
description = "HRM-Text pretraining, evaluation, and checkpoint conversion tooling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score",
    "coolname",
    "datasets",
    "einops",
    "hydra-core",
    "numba",
    "numpy",
    "omegaconf",
    "pydantic",
    "pyyaml",
    "safetensors",
    "sympy",
    "tqdm",
    "transformers",
    "wandb",
]

[project.optional-dependencies]
cpu = [
    "torch",
]
mps = [
    "torch",
]
sm90 = [
    "torch",
    "flash_attn_3 @ git+https://github.com/Dao-AILab/flash-attention.git#subdirectory=hopper",
]
sm100 = [
    "torch",
    "flash-attn-4[cu13] @ git+https://github.com/Dao-AILab/flash-attention.git#subdirectory=flash_attn/cute",
]
eval = [
    "lm-eval[hf,vllm]",
    "math-verify",
    "vllm",
]
server = [
    "fastapi",
    "uvicorn",
]

[tool.uv]
package = false

[tool.uv.sources]
flash_attn_3 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "hopper" }
flash-attn-4 = { git = "https://github.com/Dao-AILab/flash-attention.git", subdirectory = "flash_attn/cute" }
